[package]
name = "roy"
version = "0.1.0"
authors = ["Jared Forth <jaredforthdev@gmail.com>"]
edition = "2018"

description = "This crate is a high-level library for consuming RESTful APIs."
homepage = "https://crates.io/crates/roy"
repository = "https://github.com/jaredforth/roy"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/roy"
keywords = ["http", "api", "rest", "restful", "restful-api"]
categories = ["web-programming::http-client", "web-programming"]

[badges]
travis-ci = { repository = "jaredforth/roy" }
appveyor = { repository = "jaredforth/roy" }

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-test = "0.2.1"